@startuml

title __SNAKESANDLADDERSGAME's Class Diagram__\n

  namespace  {
    namespace om.example.snakesandladdersgame {
      class com.example.snakesandladdersgame.HelloApplication {
          {static} + main()
          + start()
      }
    }
  }
  

  namespace  {
    namespace om.example.snakesandladdersgame {
      class com.example.snakesandladdersgame.HelloController {
          + bluet : ImageView
          + player1x : int
          + player2x : int
          + redt : ImageView
          + rollb : Button
          + welcomeText : Label
          ~ arrowdown : ImageView
          ~ btoken0 : ImageView
          ~ celebrate : ImageView
          ~ dicecount : int
          ~ dieImage : ImageView
          ~ dierotate : ImageView
          ~ fireworks : ImageView
          ~ player1flag : int
          ~ player1win : ImageView
          ~ player2flag : int
          ~ player2win : ImageView
          ~ rand : Random
          ~ redflag : int
          ~ rtoken0 : ImageView
          - player1 : Label
          - player2 : Label
          + getcoordinate()
          + initialize()
          # onHelloButtonClick()
      }
    }
  }
  

  namespace  {
    namespace om.example.snakesandladdersgame {
      class com.example.snakesandladdersgame.dice {
          + setDieImage()
      }
    }
  }
  

  namespace  {
    namespace om.example.snakesandladdersgame {
      class com.example.snakesandladdersgame.ladders {
          ~ playerxx : int
          + climb()
          + getplayerxx()
      }
    }
  }
  

  namespace  {
    namespace om.example.snakesandladdersgame {
      class com.example.snakesandladdersgame.movement {
          {static} + playerxx : int
          + run()
          ~ movement()
      }
    }
  }
  

  namespace  {
    namespace om.example.snakesandladdersgame {
      class com.example.snakesandladdersgame.players {
          + playeraunlock()
          + playerbunlock()
      }
    }
  }
  

  namespace  {
    namespace om.example.snakesandladdersgame {
      class com.example.snakesandladdersgame.snakes {
          ~ playerxx : int
          + eat()
          + getplayerxx()
      }
    }
  }
  

  namespace  {
    namespace om.example.snakesandladdersgame {
      class com.example.snakesandladdersgame.token {
          ~ playerzz : int
          + getplayerzz()
          + movetokenh()
      }
    }
  }
  

  com.example.snakesandladdersgame.HelloApplication -up-|> javafx.application.Application
  com.example.snakesandladdersgame.HelloController o-- com.example.snakesandladdersgame.token : bluetok
  com.example.snakesandladdersgame.HelloController o-- com.example.snakesandladdersgame.dice : die
  com.example.snakesandladdersgame.HelloController o-- com.example.snakesandladdersgame.ladders : ladder
  com.example.snakesandladdersgame.HelloController o-- com.example.snakesandladdersgame.movement : movement1
  com.example.snakesandladdersgame.HelloController o-- com.example.snakesandladdersgame.movement : movement2
  com.example.snakesandladdersgame.HelloController o-- com.example.snakesandladdersgame.players : playera
  com.example.snakesandladdersgame.HelloController o-- com.example.snakesandladdersgame.players : playerb
  com.example.snakesandladdersgame.HelloController o-- com.example.snakesandladdersgame.token : redtok
  com.example.snakesandladdersgame.HelloController o-- com.example.snakesandladdersgame.snakes : snake
  com.example.snakesandladdersgame.movement o-- U : arrowdown
  com.example.snakesandladdersgame.movement o-- U : celebrate
  com.example.snakesandladdersgame.movement o-- U : colt
  com.example.snakesandladdersgame.movement o-- X : coltok
  com.example.snakesandladdersgame.movement o-- U : fireworks
  com.example.snakesandladdersgame.movement o-- Z : ladder
  com.example.snakesandladdersgame.movement o-- U : player1win
  com.example.snakesandladdersgame.movement o-- U : player2win
  com.example.snakesandladdersgame.movement o-- T : rand_int1
  com.example.snakesandladdersgame.movement o-- T : redflag
  com.example.snakesandladdersgame.movement o-- W : rollb
  com.example.snakesandladdersgame.movement o-- Y : snake
  com.example.snakesandladdersgame.movement o-- T : temp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
